# ssh-editor

./: .gitignore  CLAUDE.md  Makefile  README.md  index.html  package-lock.json  package.json
scripts/: check-env.ps1  check-env.sh  install-app.ps1  install-app.sh  native.sh  setup-env.ps1  setup-env.sh
src/: App.module.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: connection_cmds.rs  mod.rs  sftp_cmds.rs  terminal_cmds.rs
src-tauri/src/config/: app_config.rs  mod.rs  ssh_config.rs
src-tauri/src/ssh/: connection.rs  mod.rs  sftp.rs  terminal.rs  transfer.rs
src/components/ActivityBar/: ActivityBar.module.css  index.tsx
src/components/BottomPanel/: BottomPanel.module.css  index.tsx
src/components/Dialogs/: ConfirmDialog.tsx  Dialog.module.css  ExternalChangeDialog.tsx  NewConnectionDialog.tsx  OpenFileDialog.tsx  ReconnectDialog.tsx  SaveConflictDialog.tsx  SettingsDialog.tsx
src/components/EditorArea/: EditorArea.module.css  index.tsx
src/components/LanguageStatus/: LanguageStatus.module.css  index.tsx
src/components/SidePanel/: SidePanel.module.css  index.tsx
src/components/ThemePicker/: ThemePicker.module.css  (+1 more)
src/ipc/: commands.ts  events.ts
src/stores/: confirmStore.ts  connectionStore.ts  editorStore.ts  fileTreeStore.ts  logStore.ts  settingsStore.ts  terminalStore.ts  transferStore.ts
src/styles/: globals.css
src/themes/: index.ts
src/types/: index.ts
src/utils/: languageDetect.ts  languages.ts  tabLabels.ts
(+20 files in other folders)
